# cloud-discovery-py

./: .flake8  .gitignore  CHANGELOG.md  README.md  RELEASE.md  noxfile.py  pydoc-markdown.yml  pyproject.toml  release-please-config.json
.github/workflows/: api-docs-release.yaml  api-docs-release.yml  pypi-release.yml  python-build.yml  python-lint.yml  python-test.yml  python.yml  release-please.yaml  release-please.yml  snyk-monitor.yaml  snyk-scan.yaml  snyk-test.yaml
documentation/: README.md  makersaurus.config.js  package-lock.json  sidebars.js
documentation/docs/: index.md  overview.md  release-notes.md
documentation/docs/api/: sidebar.json
documentation/docs/api/h2o_discovery/: __init__.md  h2o_discovery.mdx  model.md
documentation/docs/examples/: available-services.md  installing-clients.md  more_examples.md  wave_app.md
src/h2o_discovery/: __init__.py  _async_client.py  _client.py  _load.py  _version.py  async_client.py  client.py  config.py  discover.py  discovery.py  exceptions.py  load.py  lookup.py  model.py
src/h2o_discovery/_internal/: client.py  compat.py  config.py  fetch.py  load.py  lookup.py
tests/: test_async_client.py  test_client.py  test_config.py  test_discover.py  test_discovery.py  test_load.py  test_lookup.py  test_model.py  test_version.py
tests/_internal/: test_client.py  test_config.py  test_fetch.py  test_load.py  test_lookup.py  test_lookup_determine_local_config_path.py  test_lookup_determine_uri.py
tests/_internal/load/: test_load_credentials.py  test_load_discovery.py
tests/_internal/lookup/: test_determine_local_config_path.py  test_determine_uri.py
tests/e2e/: conftest.py  test_clients.py  test_environment.py  test_services.py
