[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["H2O.ai <support@h2o.ai>"]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Internet",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Security",
  "Topic :: Utilities",
]
description = "H2O Cloud Discovery Python CLient"
license = "Apache-2.0"
name = "h2o-cloud-discovery"
packages = [
  {include = "h2o_discovery", from = "src"},
]
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
httpx = ">=0.16"
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "5.0.4"
flake8-bugbear = "^22.10.27"
flake8-builtins = "^1.5.3"
flake8-deprecated = "^1.3"
flake8-eradicate = "^1.4.0"
mypy = "^0.991"
nox = "^2022.11.21"
nox-poetry = "^1.0.2"
pytest = "^7.2"
pytest-asyncio = "^0.20.2"
respx = ">=0.16"

[tool.black]
skip-magic-trailing-comma = true
